DG-2008-06-09-1: Cleanup:   Installation for 6.1 didn't work correctly since 
                            a text change when asking for gid range. 
                 Review:    RD

DG-2008-06-09-0: Cleanup:   Several issues in Java DRMAA test:
                            - incorrect return value of a procedure
                            - filetype of library was hardcoded 
                 Review:    JG

JG-2008-06-09-0: Bugfix:    - qdel test only ran qdel_force check_function
                            - fixed timeout handling when installing csp
                              certificates
                 Review:    RD

CR-2008-06-05-1: Bugfix:    Fixed problem with ping_daemon procedure
                 Review:    ZG

LP-2008-06-05-0: Bugfix:    Fixed install message
                 Review:    AP

CR-2008-06-05-0: Bugfix:    o disabled hedeby manage_admin_user check for user
                              system
                            o Fixed possible TCL errors (read of not existing
                              array entry) in hedeby slo/minResource check
                 Review:    RH

ZG-2008-06-04-0: Enhancem.: o Added ping_daemon procedure. 
                            o Execd start up test for CR 6609754
                 Review:    AP

LP-2008-06-04-0: Enhancem.: Modified install message
                 Review:    MP

CR-2008-06-04-0: Bugfix:    Fixed broken hedeby checktree test: 
                            resources/move/inprocess/check.62.exp
                 Review:    RH

DG-2008-06-04-0: Cleanup:   Install didn't install HP11 32 bit binaries when 
                            compiling on HP11 64 bit host. This failure was 
                            introduced with gridengine checkin DG-2008-05-15-0.
                 Review:    JG

RM-2008-06-03-0: Cleanup:   hedeby, installation of managed host no longer prints
                            license -al switch removed
                 Review:    MG
