@@ -2103,8 +2103,8 @@ proc host_conf_get_unused_host {{raise_error 1}} {
 #*******************************************************************************
 proc get_java_home_for_host { hosti {java_version "1.4"} {raise_error 1}} {
     global ts_host_config CHECK_OUTPUT
+
     set version [get_testsuite_java_version $java_version]
-    
     set host [node_get_host $hosti]
     set input $ts_host_config($host,java$version)
 
