@@ -1,3 +1,7 @@
+JG-2008-06-11-0: Enhancem.: - speedup of auto install
+                            - improvements in performance/throughput test
+                 Review:    RD
+
 DG-2008-06-09-1: Cleanup:   Installation for 6.1 didn't work correctly since 
                             a text change when asking for gid range. 
                  Review:    RD
